--- a/client/partials/SideNav.html
+++ b/client/partials/SideNav.html
@@ -5,10 +5,10 @@
 				<a href="/recipe-book"><i class="fa fa-list"></i> Recipe Book</a>
 			</li>
 			<li>
-				<a href="/"><i class="fa fa-map-o"></i> Menu</a>
+				<a href="/menu"><i class="fa fa-map-o"></i> Menu</a>
 			</li>
 			<li>
-				<a href="/shooping-list"><i class="fa fa-shooping-cart"></i> Shooping List</a>
+				<a href="/shopping-list"><i class="fa fa-shopping-cart"></i> Shooping List</a>
 			</li>
 		</ul>
 	</nav>
